--- a/css/embedvideo.css
+++ b/css/embedvideo.css
@@ -3,11 +3,13 @@ div.tcenter.embedvideo, div.embedvideo.ev_center {
 	margin-right: auto;
 }
 
+/* @noflip */
 div.embedvideo.ev_left {
 	clear: left;
 	float: left;
 }
 
+/* @noflip */
 div.embedvideo.ev_right {
 	clear: right;
 	float: right;
